kuberenetes-manifests/apiwiz-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apiwiz-gateway
  namespace: apiwiz-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.apiwiz.io'
    port:
      name: https-apiwiz
      number: 443
      protocol: HTTPS
    tls:
      credentialName: apiwiz-credential-2024
      mode: SIMPLE
  - hosts:
    - mock.apiwiz.io
    port:
      name: https-mock-api
      number: 443
      protocol: HTTPS
    tls:
      credentialName: apiwiz-credential-2024
      mode: SIMPLE
  - hosts:
    - '*.apiwiz.io'
    port:
      name: http-apiwiz
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - testing-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715573118600
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - testing-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715573118600
      number: 443
      protocol: HTTPS
    tls:
      credentialName: acme-team-gcp-stage-1715573116883
      mode: SIMPLE
  - hosts:
    - tefff-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715574330983
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - tefff-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715574330983
      number: 443
      protocol: HTTPS
    tls:
      credentialName: acme-team-gcp-stage-1715574330972
      mode: SIMPLE
  - hosts:
    - tefff-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715576251848
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - tefff-abcd.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715576251848
      number: 443
      protocol: HTTPS
    tls:
      credentialName: acme-team-gcp-stage-1715576251753
      mode: SIMPLE
  - hosts:
    - acme-test-header.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715597926436
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - acme-test-header.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715597926436
      number: 443
      protocol: HTTPS
    tls:
      credentialName: acme-team-gcp-stage-1715597926302
      mode: SIMPLE
  - hosts:
    - acme-test-header.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715601057729
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - acme-test-header.itorix.com
    port:
      name: https-acme-team-gcp-stage-1715601057729
      number: 443
      protocol: HTTPS
    tls:
      credentialName: acme-team-gcp-stage-1715601056344
      mode: SIMPLE
